
2006-05-25 Scott Dattalo <scott@dattalo.com>
	* src/glcd_100X32_sed1520.cc: There is segv lurking...

2005-12-29 Scott Dattalo <scott@dattalo.com>
	* commit'd code to CVS